[project]
name = "thoughtful-ai-tech-screen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "langchain-cohere>=0.4.5",
    "langchain-community>=0.3.27",
    "langgraph>=0.6.5",
    "streamlit>=1.48.1",
]
